tests/suite/snapshots/suite__parse__tests__parse__group-of-anonymous03-01-4.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/group-of-anonymous03-01-4.xi:8:29]
   │
 8 │     printab("Hello, World\n";
   ·                             ┬  
   ·                             ╰── Unexpected token
───╯

